# cmake-vcpkg-experiment

./: CMakeLists.txt  LICENSE  README.md  program.cpp
include/cjm/: library.hpp
include/cjm/impl/: target_me.hpp
